testsuite/tests/grammar/unreferenced_node/test.out
test.py:15: error: Unresolved ASTNode subclass. Use it in the grammar or provide a type annotation for all its fields
Done
